--- a/apps/diegesis-user-client/public/index.html
+++ b/apps/diegesis-user-client/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="User client for the Diegesis Server"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/diegesis.png" />
-     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
       <link
               rel="stylesheet"
               href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
@@ -19,7 +19,7 @@
               rel="stylesheet"
               href="https://fonts.googleapis.com/icon?family=Material+Icons"
       />
-      <title>Diegesis Admin</title>
+      <title>Diegesis Dashboard</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
