--- a/apps/diegesis-user-client/public/index.html
+++ b/apps/diegesis-user-client/public/index.html
@@ -19,7 +19,7 @@
               rel="stylesheet"
               href="https://fonts.googleapis.com/icon?family=Material+Icons"
       />
-      <title>Diegesis Dashboard</title>
+      <title>Diegesis</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
