--- a/apps/diegesis-server/src/html/login.html
+++ b/apps/diegesis-server/src/html/login.html
@@ -8,7 +8,7 @@
 <body>
 <div class="login">
     <h1>Login</h1>
-    <form action="/auth" method="post">
+    <form action="/login-auth" method="post">
         <label for="username">
             user
         </label>
