--- a/apps/diegesis-server/src/html/login.html
+++ b/apps/diegesis-server/src/html/login.html
@@ -8,7 +8,8 @@
 <body>
 <div class="login">
     <h1>Login</h1>
-    <form action="/login-auth" method="post">
+    <form action="/new-login-auth" method="post">
+        <input type="hidden" name="redirect" value="%redirect%">
         <label for="username">
             user
         </label>
